--- a/card-web/build.gradle
+++ b/card-web/build.gradle
@@ -20,9 +20,13 @@ dependencies {
 	// Persistence
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'com.h2database:h2:1.4.197'
-	implementation 'org.flywaydb:flyway-maven-plugin:4.0.3'
+//	implementation 'org.flywaydb:flyway-maven-plugin:4.0.3'
 }
 
 tasks.named('test') {
 	useJUnitPlatform()
+}
+
+configurations {
+	all*.exclude module : 'spring-boot-starter-logging'
 }
