--- a/card-web/build.gradle
+++ b/card-web/build.gradle
@@ -20,6 +20,7 @@ dependencies {
 	// Persistence
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'com.h2database:h2:1.4.197'
+	implementation group: 'org.apache.commons', name: 'commons-csv', version: '1.9.0'
 //	implementation 'org.flywaydb:flyway-maven-plugin:4.0.3'
 }
 
