--- a/card-web/build.gradle
+++ b/card-web/build.gradle
@@ -21,6 +21,8 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'com.h2database:h2:1.4.197'
 	implementation group: 'org.apache.commons', name: 'commons-csv', version: '1.9.0'
+	implementation group: 'io.springfox', name: 'springfox-swagger2', version: '2.9.2'
+	implementation group: 'io.springfox', name: 'springfox-swagger-ui', version: '2.9.2'
 //	implementation 'org.flywaydb:flyway-maven-plugin:4.0.3'
 }
 
