--- a/card-web/src/main/resources/application.yaml
+++ b/card-web/src/main/resources/application.yaml
@@ -6,7 +6,7 @@ spring:
     pathmatch:
       matching-strategy: ant_path_matcher
   datasource:
-    url: jdbc:h2:~/fiap-card;DB_CLOSE_ON_EXIT=FALSE
+    url: jdbc:h2:~/h2database/fiap-card;DB_CLOSE_ON_EXIT=FALSE
     username: fiap
     password: fiap
   h2:
